add/method-get_command
